--- a/index.html
+++ b/index.html
@@ -84,7 +84,9 @@
                         >
                       </li>
                       <li>
-                        <a title="" href="/pages/underConstruction.html"
+                        <a
+                          title=""
+                          href="/pages/areasGobierno/consejoDiscapacidad.html"
                           >Consejo Discapacidad</a
                         >
                       </li>
@@ -94,7 +96,7 @@
                         >
                       </li>
                       <li>
-                        <a title="" href="/pages/underConstruction.html"
+                        <a title="" href="/pages/areasGobierno/defensaCivil.html"
                           >Defensa Civil</a
                         >
                       </li>
@@ -104,7 +106,9 @@
                         >
                       </li>
                       <li>
-                        <a title="" href="/pages/underConstruction.html"
+                        <a
+                          title=""
+                          href="/pages/areasGobierno/desarrolloSocial.html"
                           >Desarrollo Social</a
                         >
                       </li>
@@ -119,7 +123,9 @@
                         >
                       </li>
                       <li>
-                        <a title="" href="/pages/areasGobierno/jefaturaDeGabinete.html"
+                        <a
+                          title=""
+                          href="/pages/areasGobierno/jefaturaDeGabinete.html"
                           >Jefatura de Gabinete y Coordinación Municipal</a
                         >
                       </li>
@@ -139,7 +145,9 @@
                         >
                       </li>
                       <li>
-                        <a title="" href="/pages/areasGobierno/subsecretariaSalud.html"
+                        <a
+                          title=""
+                          href="/pages/areasGobierno/subsecretariaSalud.html"
                           >Subsecretaria de Salud</a
                         >
                       </li>
@@ -149,7 +157,7 @@
                         >
                       </li>
                       <li>
-                        <a title="" href="/pages/underConstruction.html"
+                        <a title="" href="/pages/areasGobierno/turismo.html"
                           >Turismo</a
                         >
                       </li>
@@ -369,7 +377,7 @@
 
       <section class="social_rss">
         <!--Redes RSS-->
-       <!-- <iframe
+        <!-- <iframe
           width="560"
           height="315"
           src="https://www.youtube.com/embed/kn_J5IQHqt0"
@@ -429,16 +437,18 @@
             <div class="destinoMensaje">
               <br />
               <select title="Area de Gobierno" name="areaGobierno" id="area">
-                <option value="arm">
-                  Agencia de Recaudación Municipal - ARM
-                </option>
+                <option value="arm">Agencia de Recaudación Municipal</option>
                 <option value="discapacidad">Concejo de Discapacidad</option>
                 <option value="defensaCivil">Defensa Civil</option>
-                <option value="delegacionSanBlas">Delegación Bahia San Blas</option>
+                <option value="delegacionSanBlas">
+                  Delegación Bahia San Blas
+                </option>
                 <option value="delegacionCagliero">
                   Delegación Cardenal Cagliero
                 </option>
-                <option value="delegacionPradere">Delegación Juan A. Pradere</option>
+                <option value="delegacionPradere">
+                  Delegación Juan A. Pradere
+                </option>
                 <option value="delegacionStroeder">Delegación Stroeder</option>
                 <option value="deVillalonga">Delegación Villalonga</option>
                 <option value="Desarrollo Social">Desarrollo Social</option>
